Edge:
* [CHANGE] Rake's silent mode is respected for indexing (@endoscient).

2013-08-26: 3.0.5
* [CHANGE] Updating Riddle dependency to be >= 1.5.8.
* [FEATURE] Allow scoping of real-time index models.
* [CHANGE] Real-time index population presentation and logic are now separated.
* [CHANGE] Using the connection pool for update callbacks, excerpts, deletions.
* [FIX] Respect existing sql_query_range/sql_query_info settings.
* [CHANGE] Don't add the sphinx_internal_class_name unless STI models are indexed.
* [FIX] Don't add select clauses or joins to sql_query if they're for query/ranged-query properties.
* [CHANGE] Use Mysql2's reconnect option and have it turned on by default.
* [FIX] Set database timezones as part of the indexing process.
* [CHANGE] Improved auto-starring with escaped characters.
* [FIX] Chaining scopes with just options works again.

2013-07-09: 3.0.4
* [CHANGE] Updating Riddle dependency to be >= 1.5.7.
* [FEATURE] ts:regenerate rake task for rebuilding Sphinx when realtime indices are involved.
* [FEATURE] ts:clear task removes all Sphinx index and binlog files.
* [CHANGE] Glaze now responds to respond_to? (@groe).
* [FEATURE] Facet search calls now respect the limit option (which otherwise defaults to max_matches) (Demian Ferreiro).
* [FEATURE] Excerpts words can be overwritten with the words option (@groe).
* [FIX] Empty queries with the star option set to true are handled gracefully.
* [CHANGE] Deleted ActiveRecord objects are deleted in realtime indices as well.
* [CHANGE] Realtime callbacks are no longer automatically added, but they're now more flexible (for association situations).
* [CHANGE] Cleaning and refactoring so Code Climate ranks this as A-level code (Philip Arndt, Shevaun Coker, Garrett Heinlen).
* [FIX] Excerpts are now wildcard-friendly.
* [FIX] Facet searches now use max_matches value (with a default of 1000) to ensure as many results as possible are returned.