@@ -49,6 +49,7 @@ require 'thinking_sphinx/errors'
 require 'thinking_sphinx/excerpter'
 require 'thinking_sphinx/facet'
 require 'thinking_sphinx/facet_search'
+require 'thinking_sphinx/float_formatter'
 require 'thinking_sphinx/frameworks'
 require 'thinking_sphinx/index'
 require 'thinking_sphinx/index_set'
